--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "sample-react-with-webpack5",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
